<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.andriod.ScoreKeeper.MainActivity"
    android:background="@android:color/darker_gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_team_a"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                android:fontFamily="sans-serif"
                android:padding="@dimen/dp_4"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/team_a_score"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_4"
                android:gravity="center_horizontal" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_3points"
                android:background="@android:color/holo_green_dark"
                android:layout_margin="@dimen/dp_8"
                android:onClick="addThreeForTeamA"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_2points"
                android:background="@android:color/holo_green_dark"
                android:layout_margin="@dimen/dp_8"
                android:onClick="addTwoForTeamA"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_1points"
                android:background="@android:color/holo_green_dark"
                android:layout_margin="@dimen/dp_8"
                android:onClick="addOneForTeamA"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_team_b"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_4"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_b_score"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_4"
                android:gravity="center_horizontal"
                android:id="@+id/team_b_score"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_3points"
                android:background="@android:color/holo_green_dark"
                android:layout_margin="@dimen/dp_8"
                android:onClick="addThreeForTeamB"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_2points"
                android:background="@android:color/holo_green_dark"
                android:layout_margin="@dimen/dp_8"
                android:onClick="addTwoForTeamB"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_1points"
                android:background="@android:color/holo_green_dark"
                android:layout_margin="@dimen/dp_8"
                android:onClick="addOneForTeamB"
                />
        </LinearLayout>
    </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:onClick="resetScore"
            android:text="@string/score_reset"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginBottom="300dp"

            />

    </RelativeLayout>
</ScrollView>
